a lot of changes

--- a/css/simple_parallax.css
+++ b/css/simple_parallax.css
@@ -57,7 +57,7 @@ section.module.parallax h1 {
 }
 
 section.module.parallax-1 {
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/23878/pano_two.jpg");
+  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/23878/Monaco-Port-Night-e1455795401367.jpg");
   background-color: #c95347;
 }
 section.module.parallax-2 {
