--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,12 @@ nav li a:active {
   color: #fff;
 }
 
+#video {
+  width:100%;
+  background-color:#000000;
+  padding: 100px 0;   
+}
+
 #footer {
   width: 100;
   padding: 100px 0;
