--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ header {
 }
 
 .branding {
-  background: url("../images/0") no-repeat;
+  background: url("../images/yatchpoint.svg") no-repeat;
   display: block;
   width: 170px;
   height: 40px;
